--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* RESET */
 * {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,3 +12,21 @@
     height: 3.75em;
     margin-bottom: 15px;
 }
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+img {
+    width: 280px;
+  }
+  
+  .product-image {
+    width: 80%;
+  }
